fixed bug where active dropdown wasnt dissapearing on small screen

--- a/working.css
+++ b/working.css
@@ -238,12 +238,16 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child), .dropdown .dropbtn {
+  .topnav a:not(:first-child), .dropdown .dropbtn, .dropdown .dropbtnActive {
     display: none;
   }
   .topnav a, .dropdown .dropbtn {
     font-size: 16pt;
     padding: 4pt 6pt 4pt 6pt;
+}
+.topnav a, .dropdown .dropbtn {
+  font-size: 16pt;
+  padding: 4pt 6pt 4pt 6pt;
 }
   .topnav a.icon {
     float: right;
@@ -272,6 +276,8 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
     text-align: left;
   }
 }
+
+/* General Spacing Classes */
 
 .row {
     display: flex;
